tests/ui/deriving/issue-105101.stderr
error: multiple declared defaults
  --> $DIR/issue-105101.rs:3:10
   |
LL | #[derive(Default)]
   |          ^^^^^^^
...
LL |     A,
   |     - first default
LL |     #[default]
LL |     A,
   |     - additional default
   |
   = note: only one variant can be default
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `A` is defined multiple times
  --> $DIR/issue-105101.rs:8:5
   |
LL |     A,
   |     - previous definition of the type `A` here
LL |     #[default]
LL |     A,
   |     ^ `A` redefined here
   |
   = note: `A` must be defined only once in the type namespace of this enum

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0428`.
