tests/ui/deriving/issue-105101.rs
// compile-flags: --crate-type=lib

#[derive(Default)] //~ ERROR multiple declared defaults
enum E {
    #[default]
    A,
    #[default]
    A, //~ ERROR defined multiple times
}
